// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate request for NodeJs Native generate GET request 1`] = `
"const http = require('http');

const url = 'https://httpbin.org/path/to?a=b';
const options = {
  method: 'GET',
  headers: {
    \\"Authorization\\": \\"Basic bW9ja1VzZXI6bW9ja1Bhc3N3b3Jk\\",
    \\"h1\\": \\"h1v\\",
    \\"h2\\": \\"h2v\\"
  }};

const request = http.request(url, options, (response) => {
  console.log(response);
});

request.on('error', (e) => {
  console.error(e);
});
request.end();"
`;

exports[`generate request for NodeJs Native generate POST request for JSON 1`] = `
"const http = require('http');

const url = 'https://httpbin.org/path/to?a=b';
const options = {
  method: 'POST',
  headers: {
    \\"Authorization\\": \\"Bearer abcdefghijklmn\\",
    \\"Content-Type\\": \\"application/json; charset=utf-8\\",
    \\"h1\\": \\"h1v\\",
    \\"h2\\": \\"h2v\\"
  }};

const request = http.request(url, options, (response) => {
  console.log(response);
});

request.on('error', (e) => {
  console.error(e);
});

request.write(JSON.stringify({\\"foo\\": \\"bar\\", \\"baz\\": \\"qux\\"}));
request.end();"
`;

exports[`generate request for NodeJs Native generate POST request for XML 1`] = `
"const http = require('http');

const url = 'https://httpbin.org/path/to?a=b';
const options = {
  method: 'POST',
  headers: {
    \\"Authorization\\": \\"Bearer abcdefghijklmn\\",
    \\"Content-Type\\": \\"application/xml; charset=utf-8\\",
    \\"h1\\": \\"h1v\\",
    \\"h2\\": \\"h2v\\"
  }};

const request = http.request(url, options, (response) => {
  console.log(response);
});

request.on('error', (e) => {
  console.error(e);
});

request.write(\`<?xml version='1.0' encoding='utf-8'?>
<xml>
  <element foo=\\"bar\\"></element>
</xml>\`);
request.end();"
`;

exports[`generate request for NodeJs Native generate PUT request for www-form-urlencoded 1`] = `
"const http = require('http');

const url = 'https://httpbin.org/path/to?a=b';
const options = {
  method: 'PUT',
  headers: {
    \\"Content-Type\\": \\"application/x-www-form-urlencoded; charset=utf-8\\"
  }};

const request = http.request(url, options, (response) => {
  console.log(response);
});

request.on('error', (e) => {
  console.error(e);
});

request.write(\`foo=bar&baz=qux\`);
request.end();"
`;
